<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Popup"
    android:background="@drawable/bg_rectangle"
    android:layout_gravity="center">
    <LinearLayout
        android:id="@+id/isi"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <TextView
            android:id="@+id/tvNama"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_input"
            android:text="@string/nama"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_input"
            android:text="@string/deskripsi"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/bg_input"
                android:text="@string/bahan_bahan"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/tvBahan"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_pop"
                android:gravity="start"
                android:text="@string/bahan"
                android:textSize="18sp"
                android:textColor="@color/black"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/bg_input"
                android:text="@string/langkah"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/tvLangkah"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_pop"
                android:gravity="start"
                android:text="@string/langkh"
                android:textSize="18sp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btTutup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#49B0C6"
        android:clickable="true"
        android:text="@string/keluar"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isi"/>
</androidx.constraintlayout.widget.ConstraintLayout>