<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TambahResep"
    android:background="#3D79F8">
    <TextView
        android:id="@+id/Appl"
        android:layout_width="match_parent"

        android:layout_height="75dp"
        android:background="#D9D9D9"
        android:gravity="center"
        android:text="ResepiMama"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="75dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Appl">

        <EditText
            android:id="@+id/etNamaResep"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_input"
            android:hint="@string/nama_resep"
            android:inputType="text"
            android:paddingLeft="30dp"
            android:paddingRight="20dp"
            android:textColor="@color/black"
            android:textColorHint="#767676" />
        <EditText
            android:id="@+id/etDeskripsi"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_input"
            android:hint="@string/desc"
            android:inputType="text"
            android:paddingLeft="30dp"
            android:paddingRight="20dp"
            android:textColor="@color/black"
            android:textColorHint="#767676" />
        <EditText
            android:id="@+id/etbahan"

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_input"
            android:hint="@string/bahan2"
            android:inputType="text"
            android:paddingLeft="30dp"
            android:paddingRight="20dp"
            android:textColor="@color/black"
            android:textColorHint="#767676" />
        <EditText
            android:id="@+id/etLangkah"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_input"
            android:hint="@string/langkah2"
            android:inputType="text"
            android:paddingLeft="30dp"
            android:paddingRight="20dp"
            android:textColor="@color/black"
            android:textColorHint="#767676" />

        <LinearLayout
            android:id="@+id/content1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content">

            <ImageView
                android:id="@+id/ivResep"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:background="@drawable/bg_input"
                android:inputType="text"
                android:scaleType="centerCrop"
                android:src="@android:drawable/ic_menu_upload"
                android:textColor="@color/black"
                android:textColorHint="#767676" />
            <Button
                android:id="@+id/btUnggahFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unggah"
                android:layout_marginStart="25dp"
                android:backgroundTint="#49B0C6" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/content2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content">
        <Button
            android:id="@+id/btSimpan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#49B0C6"
            android:clickable="true"
            android:text="@string/simpan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content" />
        <Button
            android:id="@+id/btCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:backgroundTint="#A2A2A2"
            android:clickable="true"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btSimpan" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>