<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bg_rectangle"
            android:padding="14dp">
        <ImageView
            android:id="@+id/ivResep"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="start"
            tools:src="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp">

    <TextView
        android:id="@+id/tvNamaResep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/nama"
        android:gravity="start"
        app:layout_constraintStart_toEndOf="@+id/ivResep"
        app:layout_constraintTop_toTopOf="@+id/ivResep"/>

    <TextView
        android:id="@+id/tvDeskripsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:text="@string/deskripsi"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@+id/btTampil"
        app:layout_constraintStart_toEndOf="@+id/ivResep"
        app:layout_constraintTop_toBottomOf="@+id/tvNamaResep"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="97dp"
            android:layout_gravity="end">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <ImageButton
                android:id="@+id/ibedit"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_edit"/>
            <ImageButton
                android:id="@+id/ibClose"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/ic_delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

            <Button
                android:id="@+id/btTampil"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#49B0C6"
                android:text="@string/lihat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/ibClose"
                app:layout_constraintStart_toStartOf="@+id/ibClose"/>

        </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>